# SolidPy_proto_registry_template

./: CHANGELOG.md  README.md  pyproject.toml
scripts/bash/: build.sh  publish.sh
solidpy_proto/: solidpy_test.proto  solidpy_test_pb2.py  solidpy_test_pb2.pyi  solidpy_test_pb2_grpc.py  solidpy_test_pb2_grpc.pyi  test_proto.py
solidpy_proto/protogrpc/: solidpy_test_pb2_grpc.py  solidpy_test_pb2_grpc.pyi
solidpy_proto/protopy/: solidpy_test_pb2.py  solidpy_test_pb2.pyi
