[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "solidpy_proto"
version = "0.0.3"
description = "Base Template for SolidPy.proto_registry"
authors = [ "Craig Holland <craig_holland@hotmail.com>",]
readme = "README.md"
[[tool.poetry.source]]
name = "pypi-gcp"
url = "https://us-west1-python.pkg.dev/cholland-form/pypi-gcp/simple"
priority = "supplemental"

[tool.black]
line-length = 79
include = "\\.pyi?$"
exclude = "/(\n    \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true

[tool.poetry-grpc-plugin]
proto_path = "."
python_out = "."
grpc_python_out = "."
venv_proto_paths = [ "google/type",]

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
pyyaml = "^6.0.1"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"
tox = "^4.15.0"
pre-commit = "^3.7.1"
pycparser = "2.22"
protobuf = "^5.27.0"
poetry-grpc-plugin = "^0.1.9"
certifi = "2024.2.2"
rapidfuzz = "3.9.1"
requests = "2.32.2"
pkginfo = "1.10.0"
google-api-python-client = "^2.132.0"
